--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>{{ page.title }} - {{ site.title }}</title>
-  <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg"/>
-  <link rel="stylesheet" href="/assets/styles.css"/>
+  <link rel="icon" type="image/svg+xml" href="{{ site.baseurl }}/assets/favicon.svg"/>
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles.css"/>
 </head>
 <body>
   <nav class="navbar">
     <div class="nav-container">
       <div class="nav-links">
-        <a href="/">About</a>
-        <a href="/articles/">Articles</a>
-        <a href="/letters/">The Handwritten Letter Project</a>
+        <a href="{{ site.baseurl }}/">About</a>
+        <a href="{{ site.baseurl }}/articles/">Articles</a>
+        <a href="{{ site.baseurl }}/letters/">The Handwritten Letter Project</a>
       </div>
     </div>
   </nav>
@@ -26,6 +26,6 @@
     <p>Spotted a typo? <a href="https://github.com/wafaajaunnoo/unfinishedarticles/issues" target="_blank">Open an issue.</a></p>
   </footer>
 
-  <script src="/assets/script.js"></script>
+  <script src="{{ site.baseurl }}/assets/script.js"></script>
 </body>
 </html>
