--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@
     <div class="nav-container">
       <div class="nav-links">
         <a href="{{ '/' | relative_url }}">About</a>
-        <a href="{{ '/articles/' | relative_url }}">Articles</a>
+        <a href="{{ '/articles.html' | relative_url }}">Articles</a>
         <a href="{{ '/letters/' | relative_url }}">The Handwritten Letter Project</a>
       </div>
     </div>
