updated nav url

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <div class="nav-container">
       <div class="nav-links">
         <a href="{{ site.baseurl }}/">About</a>
-        <a href="{{ site.baseurl }}/articles/">Articles</a>
+        <a href="{{ site.baseurl }}/articles.html/">Articles</a>
         <a href="{{ site.baseurl }}/letters/">The Handwritten Letter Project</a>
       </div>
     </div>
