--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>{{ page.title }} - {{ site.title }}</title>
   <link rel="icon" type="image/svg+xml" href="{{ site.baseurl }}/assets/favicon.svg"/>
+  <link href="https://fonts.googleapis.com/css2?family=Schoolbell&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{{ site.baseurl }}/assets/styles.css"/>
 </head>
 <body>
