--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,9 @@
 <head>
   <meta charset="UTF-8" />
   <title>{{ page.title }} | Unfinished Articles</title>
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Schoolbell&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{{ '/assets/styles.css' | relative_url }}" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
